--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	},
 	"dependencies": {
 		"@astrojs/mdx": "^0.11.1",
+		"@astrojs/prefetch": "^0.0.7",
 		"@astrojs/rss": "^1.0.1",
 		"@astrojs/sitemap": "^1.0.0",
 		"@astrojs/tailwind": "^1.0.1",
